--- a/Sito_Generale/FileHTML/sito.html
+++ b/Sito_Generale/FileHTML/sito.html
@@ -62,74 +62,80 @@
       <h2 class="text-center mb-5">Prodotti in evidenza</h2>
       <div class="row g-4">
 
-        <!-- Prodotto 1 -->
+        <!-- Prodotto 1: Flipper Zero -->
         <div class="col-md-4">
           <div class="card product-card text-white">
             <img src="https://flipperzero.one/images/og-image.jpg" class="card-img-top" alt="Flipper Zero">
             <div class="card-body">
               <h5 class="card-title">Flipper Zero</h5>
               <p class="card-text">Multi-tool portatile per pentester: RFID, IR, Bluetooth, USB e molto altro.</p>
-              <a href="#" class="btn btn-outline-success">Acquista</a>
+              <!-- Link alla pagina del prodotto -->
+              <a href="Flipper.html" class="btn btn-outline-success">Acquista</a>
             </div>
           </div>
         </div>
 
-        <!-- Prodotto 2 -->
+        <!-- Prodotto 2: Rubber Ducky -->
         <div class="col-md-4">
           <div class="card product-card text-white">
             <img src="https://hak5.org/cdn/shop/products/rubber_ducky_3_1200x.png" class="card-img-top" alt="Rubber Ducky">
             <div class="card-body">
               <h5 class="card-title">Rubber Ducky</h5>
               <p class="card-text">USB camuffata che inietta comandi al volo come una tastiera umana.</p>
-              <a href="#" class="btn btn-outline-success">Acquista</a>
+              <!-- Link alla pagina del prodotto -->
+              <a href="Rubber.html" class="btn btn-outline-success">Acquista</a>
             </div>
           </div>
         </div>
 
-        <!-- Prodotto 3 -->
+        <!-- Prodotto 3: WiFi Pineapple -->
         <div class="col-md-4">
           <div class="card product-card text-white">
             <img src="https://hak5.org/cdn/shop/products/wifi-pineapple-elite-hero_1024x1024.jpg" class="card-img-top" alt="WiFi Pineapple">
             <div class="card-body">
               <h5 class="card-title">WiFi Pineapple</h5>
               <p class="card-text">Strumento avanzato per audit delle reti WiFi e attacchi MITM.</p>
-              <a href="#" class="btn btn-outline-success">Acquista</a>
+              <!-- Link alla pagina del prodotto -->
+              <a href="wifi-pineapple.html" class="btn btn-outline-success">Acquista</a>
             </div>
           </div>
         </div>
 
-        <!-- Prodotto 4 -->
+        <!-- Prodotto 4: Bash Bunny -->
         <div class="col-md-4">
           <div class="card product-card text-white">
             <img src="https://hak5.org/cdn/shop/products/bashbunny2.0_1024x1024.jpg" class="card-img-top" alt="Bash Bunny">
             <div class="card-body">
               <h5 class="card-title">Bash Bunny</h5>
               <p class="card-text">Dispositivo USB multi-funzione per attacchi rapidi e complessi.</p>
-              <a href="#" class="btn btn-outline-success">Acquista</a>
+              <!-- Link alla pagina del prodotto -->
+              <a href="bash-bunny.html" class="btn btn-outline-success">Acquista</a>
             </div>
           </div>
         </div>
 
-        <!-- Prodotto 5 -->
+        <!-- Prodotto 5: Proxmark3 -->
         <div class="col-md-4">
           <div class="card product-card text-white">
             <img src="https://raw.githubusercontent.com/Proxmark/proxmark3/master/doc/images/rdv4_front.jpg" class="card-img-top" alt="Proxmark3">
             <div class="card-body">
               <h5 class="card-title">Proxmark3</h5>
               <p class="card-text">Tool professionale per analisi, clonazione e sniffing di badge RFID/NFC.</p>
-              <a href="#" class="btn btn-outline-success">Acquista</a>
+              <!-- Link alla pagina del prodotto -->
+              <a href="proxmark3.html" class="btn btn-outline-success">Acquista</a>
             </div>
           </div>
         </div>
 
-        <!-- Prodotto 6 -->
+        <!-- Prodotto 6: Set Lockpick -->
         <div class="col-md-4">
           <div class="card product-card text-white">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Lockpick_set.jpg/800px-Lockpick_set.jpg" class="card-img-top" alt="Set Lockpick">
             <div class="card-body">
               <h5 class="card-title">Set Lockpick</h5>
               <p class="card-text">Strumenti per il lockpicking analogico, ideali per l'hardware hacking.</p>
-              <a href="#" class="btn btn-outline-success">Acquista</a>
+              <!-- Link alla pagina del prodotto -->
+              <a href="lockpick-set.html" class="btn btn-outline-success">Acquista</a>
             </div>
           </div>
         </div>
