Added the href with the singular pafìges oof the products, and uploaded images

--- a/Sito_Generale/FileHTML/sito.html
+++ b/Sito_Generale/FileHTML/sito.html
@@ -42,6 +42,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Prodotti</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contatti</a></li>
+          <li class="nav-item"><a class="nav-link" href="carrello.html">Carrello</a></li>
         </ul>
       </div>
     </div>
@@ -65,7 +66,7 @@
         <!-- Prodotto 1: Flipper Zero -->
         <div class="col-md-4">
           <div class="card product-card text-white">
-            <img src="https://flipperzero.one/images/og-image.jpg" class="card-img-top" alt="Flipper Zero">
+            <img src="Flipper-Zero.webp" class="card-img-top" alt="Flipper Zero">
             <div class="card-body">
               <h5 class="card-title">Flipper Zero</h5>
               <p class="card-text">Multi-tool portatile per pentester: RFID, IR, Bluetooth, USB e molto altro.</p>
@@ -78,7 +79,7 @@
         <!-- Prodotto 2: Rubber Ducky -->
         <div class="col-md-4">
           <div class="card product-card text-white">
-            <img src="https://hak5.org/cdn/shop/products/rubber_ducky_3_1200x.png" class="card-img-top" alt="Rubber Ducky">
+            <img src="Rubber.webp" class="card-img-top" alt="Rubber Ducky">
             <div class="card-body">
               <h5 class="card-title">Rubber Ducky</h5>
               <p class="card-text">USB camuffata che inietta comandi al volo come una tastiera umana.</p>
@@ -91,12 +92,12 @@
         <!-- Prodotto 3: WiFi Pineapple -->
         <div class="col-md-4">
           <div class="card product-card text-white">
-            <img src="https://hak5.org/cdn/shop/products/wifi-pineapple-elite-hero_1024x1024.jpg" class="card-img-top" alt="WiFi Pineapple">
+            <img src="wifi-pineapple.webp" class="card-img-top" alt="WiFi Pineapple">
             <div class="card-body">
               <h5 class="card-title">WiFi Pineapple</h5>
               <p class="card-text">Strumento avanzato per audit delle reti WiFi e attacchi MITM.</p>
               <!-- Link alla pagina del prodotto -->
-              <a href="wifi-pineapple.html" class="btn btn-outline-success">Acquista</a>
+              <a href="Pineapple.html" class="btn btn-outline-success">Acquista</a>
             </div>
           </div>
         </div>
@@ -104,12 +105,12 @@
         <!-- Prodotto 4: Bash Bunny -->
         <div class="col-md-4">
           <div class="card product-card text-white">
-            <img src="https://hak5.org/cdn/shop/products/bashbunny2.0_1024x1024.jpg" class="card-img-top" alt="Bash Bunny">
+            <img src="bash.webp" class="card-img-top" alt="Bash Bunny">
             <div class="card-body">
               <h5 class="card-title">Bash Bunny</h5>
               <p class="card-text">Dispositivo USB multi-funzione per attacchi rapidi e complessi.</p>
               <!-- Link alla pagina del prodotto -->
-              <a href="bash-bunny.html" class="btn btn-outline-success">Acquista</a>
+              <a href="Bash.html" class="btn btn-outline-success">Acquista</a>
             </div>
           </div>
         </div>
@@ -117,12 +118,12 @@
         <!-- Prodotto 5: Proxmark3 -->
         <div class="col-md-4">
           <div class="card product-card text-white">
-            <img src="https://raw.githubusercontent.com/Proxmark/proxmark3/master/doc/images/rdv4_front.jpg" class="card-img-top" alt="Proxmark3">
+            <img src="prox.webp" class="card-img-top" alt="Proxmark3">
             <div class="card-body">
               <h5 class="card-title">Proxmark3</h5>
               <p class="card-text">Tool professionale per analisi, clonazione e sniffing di badge RFID/NFC.</p>
               <!-- Link alla pagina del prodotto -->
-              <a href="proxmark3.html" class="btn btn-outline-success">Acquista</a>
+              <a href="Proxmark.html" class="btn btn-outline-success">Acquista</a>
             </div>
           </div>
         </div>
@@ -130,14 +131,14 @@
         <!-- Prodotto 6: Set Lockpick -->
         <div class="col-md-4">
           <div class="card product-card text-white">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Lockpick_set.jpg/800px-Lockpick_set.jpg" class="card-img-top" alt="Set Lockpick">
+            <img src="set.webp" class="card-img-top" alt="Set Lockpick">
             <div class="card-body">
               <h5 class="card-title">Set Lockpick</h5>
               <p class="card-text">Strumenti per il lockpicking analogico, ideali per l'hardware hacking.</p>
               <!-- Link alla pagina del prodotto -->
-              <a href="lockpick-set.html" class="btn btn-outline-success">Acquista</a>
+              <a href="Set.html" class="btn btn-outline-success">Acquista</a>
             </div>
-          </div>
+          </div> 
         </div>
 
       </div>
