--- a/Sito_Generale/FileHTML/Rubber.html
+++ b/Sito_Generale/FileHTML/Rubber.html
@@ -57,7 +57,7 @@
 <section class="py-5">
   <div class="container">
     <div class="product-detail mx-auto col-md-6">
-      <img src="rubber-ducky.jpg" class="img-fluid mb-3" alt="Rubber Ducky" style="width: 100%; max-width: 500px;">
+      <img src="Rubber.webp" class="img-fluid mb-3" alt="Rubber Ducky" style="width: 100%; max-width: 500px;">
       <h2>Rubber Ducky</h2>
       <span class="badge bg-success mb-2">Pen Testing</span>
       <h3>$49.99</h3>
