--- a/Sito_Generale/FileHTML/Flipper.html
+++ b/Sito_Generale/FileHTML/Flipper.html
@@ -56,10 +56,10 @@
 <section class="py-5">
   <div class="container">
     <div class="product-detail mx-auto col-md-6">
-      <img src="flipper-zero.jpg" class="img-fluid mb-3" alt="Flipper Zero" style="width: 100%; max-width: 500px;">
+      <img src="Flipper-Zero.webp" class="img-fluid mb-3" alt="Flipper Zero" style="width: 100%; max-width: 500px;">
       <h2>Flipper Zero</h2>
       <span class="badge bg-success mb-2">Hacking Tools</span>
-      <h3>$199.99</h3>
+      <h3>€199.99</h3>
       <p class="mb-4">Flipper Zero è un dispositivo portatile multifunzionale progettato per hacker e appassionati di sicurezza. Permette di interagire con dispositivi wireless e molto altro.</p>
 
       <button class="btn btn-dark w-100">Acquista</button>
