--- a/Sito_Generale/FileHTML/carrello.html
+++ b/Sito_Generale/FileHTML/carrello.html
@@ -41,7 +41,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navMenu">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="sito.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Prodotti</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contatti</a></li>
           <li class="nav-item"><a class="nav-link active" href="#">Carrello</a></li>
