--- a/Sito_Generale/FileHTML/sito.html
+++ b/Sito_Generale/FileHTML/sito.html
@@ -41,7 +41,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Prodotti</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contatti</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contatti">Contatti</a></li>
           <li class="nav-item"><a class="nav-link" href="carrello.html">Carrello</a></li>
         </ul>
       </div>
@@ -146,7 +146,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer text-center text-white py-4">
+  <footer id="contatti" class="footer text-center text-white py-4">
     <div class="container">
       <p>&copy; 2025 HTools - Tutti i diritti riservati.</p>
       <small>Per uso legale ed etico solo. Sii un hacker responsabile.</small>
