--- a/Sito_Generale/FileHTML/sito.html
+++ b/Sito_Generale/FileHTML/sito.html
@@ -32,7 +32,7 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
+    <div class="container", id="Nav">
       <a class="navbar-brand" href="#">HTools</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
@@ -64,9 +64,9 @@
       <div class="row g-4">
 
         <!-- Prodotto 1: Flipper Zero -->
-        <div class="col-md-4">
+        <div class="col-md-4", id="Riq-Flipper">
           <div class="card product-card text-white">
-            <img src="Flipper-Zero.webp" class="card-img-top" alt="Flipper Zero">
+            <img src="./FileJPG/Flipper-Zero.webp" class="card-img-top" alt="Flipper Zero">
             <div class="card-body">
               <h5 class="card-title">Flipper Zero</h5>
               <p class="card-text">Multi-tool portatile per pentester: RFID, IR, Bluetooth, USB e molto altro.</p>
@@ -77,9 +77,9 @@
         </div>
 
         <!-- Prodotto 2: Rubber Ducky -->
-        <div class="col-md-4">
+        <div class="col-md-4", id="Riq-Rubber">
           <div class="card product-card text-white">
-            <img src="Rubber.webp" class="card-img-top" alt="Rubber Ducky">
+            <img src="./FileJPG/Rubber.webp" class="card-img-top" alt="Rubber Ducky">
             <div class="card-body">
               <h5 class="card-title">Rubber Ducky</h5>
               <p class="card-text">USB camuffata che inietta comandi al volo come una tastiera umana.</p>
@@ -90,9 +90,9 @@
         </div>
 
         <!-- Prodotto 3: WiFi Pineapple -->
-        <div class="col-md-4">
+        <div class="col-md-4", id="Riq-Pineapple">
           <div class="card product-card text-white">
-            <img src="wifi-pineapple.webp" class="card-img-top" alt="WiFi Pineapple">
+            <img src="./FileJPG/wifi-pineapple.webp" class="card-img-top" alt="WiFi Pineapple">
             <div class="card-body">
               <h5 class="card-title">WiFi Pineapple</h5>
               <p class="card-text">Strumento avanzato per audit delle reti WiFi e attacchi MITM.</p>
@@ -103,9 +103,9 @@
         </div>
 
         <!-- Prodotto 4: Bash Bunny -->
-        <div class="col-md-4">
+        <div class="col-md-4", id="Riq-Bash">
           <div class="card product-card text-white">
-            <img src="bash.webp" class="card-img-top" alt="Bash Bunny">
+            <img src="./FileJPG/bash.webp" class="card-img-top" alt="Bash Bunny">
             <div class="card-body">
               <h5 class="card-title">Bash Bunny</h5>
               <p class="card-text">Dispositivo USB multi-funzione per attacchi rapidi e complessi.</p>
@@ -116,9 +116,9 @@
         </div>
 
         <!-- Prodotto 5: Proxmark3 -->
-        <div class="col-md-4">
+        <div class="col-md-4", id="Riq-Prox">
           <div class="card product-card text-white">
-            <img src="prox.webp" class="card-img-top" alt="Proxmark3">
+            <img src="./FileJPG/prox.webp" class="card-img-top" alt="Proxmark3">
             <div class="card-body">
               <h5 class="card-title">Proxmark3</h5>
               <p class="card-text">Tool professionale per analisi, clonazione e sniffing di badge RFID/NFC.</p>
@@ -129,9 +129,9 @@
         </div>
 
         <!-- Prodotto 6: Set Lockpick -->
-        <div class="col-md-4">
+        <div class="col-md-4", id="Riq-Set">
           <div class="card product-card text-white">
-            <img src="set.webp" class="card-img-top" alt="Set Lockpick">
+            <img src="./FileJPG/set.webp" class="card-img-top" alt="Set Lockpick">
             <div class="card-body">
               <h5 class="card-title">Set Lockpick</h5>
               <p class="card-text">Strumenti per il lockpicking analogico, ideali per l'hardware hacking.</p>
