--- a/Sito_Generale/FileHTML/Flipper.html
+++ b/Sito_Generale/FileHTML/Flipper.html
@@ -37,7 +37,7 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
+  <div class="container", id="nav">
     <a class="navbar-brand" href="sito.html">HTools</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
       <span class="navbar-toggler-icon"></span>
@@ -54,9 +54,9 @@
 
 <!-- Product Detail -->
 <section class="py-5">
-  <div class="container">
+  <div class="container", id="Detail">
     <div class="product-detail mx-auto col-md-6">
-      <img src="Flipper-Zero.webp" class="img-fluid mb-3" alt="Flipper Zero" style="width: 100%; max-width: 500px;">
+      <img src=".\File.JPG\Flipper-Zero.webp" class="img-fluid mb-3" alt="Flipper Zero" style="width: 100%; max-width: 500px;">
       <h2>Flipper Zero</h2>
       <span class="badge bg-success mb-2">Hacking Tools</span>
       <h3>€199.99</h3>
