--- a/Sito_Generale/FileHTML/carrello.html
+++ b/Sito_Generale/FileHTML/carrello.html
@@ -34,7 +34,7 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
+    <div class="container", id="nav">
       <a class="navbar-brand" href="#">HTools</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
 
   <!-- Carrello -->
   <section class="py-5">
-    <div class="container">
+    <div class="container", id="cart">
       <h2 class="text-center mb-4">Il tuo carrello</h2>
 
       <div class="table-responsive">
@@ -94,7 +94,7 @@
 
   <!-- Footer -->
   <footer class="footer text-center text-white py-4">
-    <div class="container">
+    <div class="container", id="foot">
       <p>&copy; 2025 HTools - Tutti i diritti riservati.</p>
       <small>Per uso legale ed etico solo. Sii un hacker responsabile.</small>
     </div>
