--- a/Sito_Generale/FileHTML/Rubber.html
+++ b/Sito_Generale/FileHTML/Rubber.html
@@ -38,7 +38,7 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
+  <div class="container", id="Nav-Rubber">
     <a class="navbar-brand" href="sito.html">HTools</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
       <span class="navbar-toggler-icon"></span>
@@ -55,9 +55,9 @@
 
 <!-- Product Detail -->
 <section class="py-5">
-  <div class="container">
+  <div class="container", id="Product-Rubber">
     <div class="product-detail mx-auto col-md-6">
-      <img src="Rubber.webp" class="img-fluid mb-3" alt="Rubber Ducky" style="width: 100%; max-width: 500px;">
+      <img src="./FileJPG/Rubber.webp" class="img-fluid mb-3" alt="Rubber Ducky" style="width: 100%; max-width: 500px;">
       <h2>Rubber Ducky</h2>
       <span class="badge bg-success mb-2">Pen Testing</span>
       <h3>$49.99</h3>
