--- a/Sito_Generale/FileHTML/Login.html
+++ b/Sito_Generale/FileHTML/Login.html
@@ -55,7 +55,7 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
+    <div class="container", id="nav">
       <a class="navbar-brand" href="#">HTools</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
@@ -73,7 +73,7 @@
 
   <!-- Hero -->
   <section class="hero">
-    <div class="container">
+    <div class="container", id="hero">
       <h1 class="display-4 fw-bold">Benvenuto su HTools</h1>
       <p class="lead">Accedi al tuo account per esplorare i nostri tool avanzati</p>
     </div>
@@ -81,7 +81,7 @@
 
   <!-- Login Section -->
   <section class="py-5">
-    <div class="container">
+    <div class="container", id="Login">
       <div class="row justify-content-center">
         <div class="col-md-6">
           <div class="login-card">
